CS 536/pr5/tests/errors/rvalue_illegal_modification.minc
void main()
{
	//increment and simple assignment
	5++;
	4--;
	--3;
	++2;
	1 = 0;
	5 = 5;

}
